--- a/src/pages/HomePage/HomePage.module.scss
+++ b/src/pages/HomePage/HomePage.module.scss
@@ -1,15 +1,82 @@
 .home {
-  width: 100vw;
-  height: 100vh;
+  width: calc(100vw - VW(20));
+  height: calc(100vh - VW(20));
+  padding: VW(10);
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  gap: VW(10);
+  justify-content: space-between;
+  .row {
+    &__button {
+      margin-left: auto;
+    }
 
-  .logo {
-    width: VW(580);
-    height: VW(120);
+    &__bottom {
+      align-items: flex-end !important;
+    }
+
+    .logo {
+      position: relative;
+      height: VW(60);
+      width: VW(60);
+    }
+
+    &__element {
+      display: flex;
+      justify-content: space-between;
+      align-items: flex-end;
+    }
+  }
+
+  .grid {
+    display: grid;
+    grid-template-columns: VW(238) VW(942) VW(246) VW(187) VW(286);
+    align-items: flex-start;
+  }
+
+  .background {
     position: relative;
+    height: 68.072917vh;
+    width: 100%;
+    mask-image: url('/images/figure.png');
+    mask-size: cover;
+    mask-position: 0% 0%;
+    mask-repeat: no-repeat;
+    grid-column: 2/4;
+  }
+}
+
+.button {
+  display: flex;
+  align-items: center;
+  gap: VW(6);
+  cursor: pointer;
+  width: fit-content;
+
+  @include hover {
+    .main_icon__rotate {
+      rotate: 180deg;
+    }
+
+    .bracket_icon {
+      &:nth-of-type(1) {
+        transform: translateX(-50%);
+      }
+      &:nth-last-of-type(1) {
+        transform: translateX(50%);
+      }
+    }
+  }
+
+  .main_icon {
+    width: VW(20);
+    height: VW(25);
+    transition: rotate 0.7s $easeInOutExpo;
+  }
+  
+  .bracket_icon {
+    display: block;
+    width: VW(8);
+    height: VW(46);
+    transition: transform 0.7s $easeInOutExpo;
   }
 }
