--- a/src/pages/HomePage/HomePage.module.scss
+++ b/src/pages/HomePage/HomePage.module.scss
@@ -42,41 +42,19 @@
     mask-position: 0% 0%;
     mask-repeat: no-repeat;
     grid-column: 2/4;
+    overflow: hidden;
+
+    & > img {
+      object-position: inherit;
+      scale: 1.3;
+    }
+
+    &__mouse {
+      position: absolute;
+      inset: 0;
+      z-index: 100;
+      
+    }
   }
 }
 
-.button {
-  display: flex;
-  align-items: center;
-  gap: VW(6);
-  cursor: pointer;
-  width: fit-content;
-
-  @include hover {
-    .main_icon__rotate {
-      rotate: 180deg;
-    }
-
-    .bracket_icon {
-      &:nth-of-type(1) {
-        transform: translateX(-50%);
-      }
-      &:nth-last-of-type(1) {
-        transform: translateX(50%);
-      }
-    }
-  }
-
-  .main_icon {
-    width: VW(20);
-    height: VW(25);
-    transition: rotate 0.7s $easeInOutExpo;
-  }
-  
-  .bracket_icon {
-    display: block;
-    width: VW(8);
-    height: VW(46);
-    transition: transform 0.7s $easeInOutExpo;
-  }
-}
