--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -64,3 +64,11 @@
     overflow: hidden;
   }
 }
+
+.hover-anim {
+  transition: opacity 0.3s ease;
+
+  @include hover {
+    opacity: 0.5;
+  }
+}
