--- a/src/pages/HomePage/HomePage.module.scss
+++ b/src/pages/HomePage/HomePage.module.scss
@@ -5,6 +5,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+
   .row {
     &__button {
       margin-left: auto;
@@ -47,6 +48,8 @@
     & > img {
       object-position: inherit;
       scale: 1.3;
+      height: 100%;
+      width: 100%;
     }
 
     &__mouse {
